Added more functions and tests from my old number theory library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "math"
   ],
   "author": "Ryan Sandor Richards <sandor.richards@gmail.com>",
+  "contributors": [
+      {"name": "Jim Fowler",
+       "email": "fowler@math.osu.edu",
+       "url": "http://kisonecat.com/"}
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rsandor/number-theory/issues"
@@ -25,5 +30,8 @@
   "devDependencies": {
     "code": "^1.4.0",
     "lab": "^5.8.1"
+  },
+  "dependencies": {
+    "underscore": "*"
   }
 }
