--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Number theory functions for javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "lab -v -a code"
+    "test": "lab -a code"
   },
   "repository": {
     "type": "git",
